Avoid flickering on tooltip
Add `pointer-event: none;` to the tooltip to avoid flickering on hover the pseudo-element.

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -199,6 +199,7 @@ img {
   z-index: 666;
   width: 10px;
   height: 10px;
+  pointer-event: none;
 }
 .simpletooltip::before,
 .minimalist-simpletooltip::before {
